--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
         </div>
       </div>
     </main>
-    <footer  id="pie_pagina"class="container-fluid  ">
-      <div class="row justify-content-between">
-      <article id="Redes" class="col-xs-12 col-md-6  col-lg-3">
-        <div id="titulo_redes_sociales" class="col">
+    <footer  id="pie_pagina"class="container-fluid">
+      <div class="row  d-flex justifi-content-between">
+      <article id="Redes" class="col-xs-12 col-md-6  col-lg-3 d-flex align-items-end">
+        <div id="titulo_redes_sociales" class="col  ">
           <h4>Sigamos en contacto</h4>
         </div>
-        <div class="redes_sociales col">
+        <div class="redes_sociales col-xs-12 col-md-6 col-lg-3    ">
           <img id="facebook" alt="Facebook"
                 src="https://lh3.googleusercontent.com/-NSLbC_ztNls/T6VX0g6z8AI/AAAAAAAAA0A/_vyIBrmZbuY/s48/facebook48.png"
                 width=48 height=48 /></a>
@@ -156,7 +156,7 @@
           <h6>Política de privacidad</h6>
           <h8 >Copyright RodrigoMontoya©-2022.Todos los derechos reservados</h8>
         </article>
-      <article id="foto_medios_pago" class="col-xs-12 col-md-6 col-lg-3 ">
+      <article id="foto_medios_pago" class="col-xs-12 col-md-6 col-lg-3  d-flex justify-content-center">
           <img src="https://secure.mlstatic.com/developers/site/cloud/banners/co/120x240_Todos-los-medios-de-pago.jpg"
                 title="Mercado Pago - Medios de pago" alt="Mercado Pago - Medios de pago" width="120" height="240"/>
       </article>
