--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <footer  id="pie_pagina"class="container-fluid">
       <div class="row  d-flex justifi-content-between">
       <article id="Redes" class="col-xs-12 col-md-6  col-lg-3 d-flex align-items-end">
-        <div id="titulo_redes_sociales" class="col  ">
+        <div id="titulo_redes_sociales" class="col-xs-12 col-md-6 col-lg-5 ">
           <h4>Sigamos en contacto</h4>
         </div>
         <div class="redes_sociales col-xs-12 col-md-6 col-lg-3    ">
@@ -145,7 +145,7 @@
             <img id="twitter" alt="Twitter"
                 src="https://lh4.googleusercontent.com/-H9KleSQeKcw/T7YDzaGg2jI/AAAAAAAAA4M/KxLt5fPSHi4/s48/tumblr48.png"
                 width=48 height=48 /></a>
-            <img id="youtube" alt="" YouTube"
+            <img id="youtube" alt=" YouTube"
                 src="https://lh6.googleusercontent.com/-Atgpy-x_OwI/T6mYkA18hYI/AAAAAAAAA1U/qksUJ5uBq3c/s48/youtube48.png"
                 width=48 height=48 /></a>
         </div>
