cambios-seccion productos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -52,17 +52,19 @@
     </header>
     <main id="cuerpo">
       <article class="container">
-        <h1 class="text-white" id="Titulo_productos" >Productos</h1>
+        <h1 id="Titulo_productos" >Productos</h1>
      </article>
       <section id="galeria" class="container">
         <div class="text-center pt-5">
-          <h1 class="text-white">Galeria</h1>
+          <h1 id="titulo-galeria">Galeria</h1>
         </div >
          
 
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-12">
             <img src="../imagenes/producto2.jpg" alt="">
+            <h4 class="text-white">Producto1</h4>
+            <button type="button" class="btn btn-secondary justify-content-center">Comprar</button>
             
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
@@ -88,13 +90,13 @@
 
       </section>
     </main>
-    <footer  id="pie_pagina"class="container-fluid  ">
-      <div class="row justify-content-between">
-      <article id="Redes" class="col-xs-12 col-md-6  col-lg-3">
-        <div id="titulo_redes_sociales" class="col">
+    <footer  id="pie_pagina"class="container-fluid">
+      <div class="row  d-flex justifi-content-between">
+      <article id="Redes" class="col-xs-12 col-md-6  col-lg-3 d-flex align-items-end">
+        <div id="titulo_redes_sociales" class="col-xs-12 col-md-6 col-lg-5 ">
           <h4>Sigamos en contacto</h4>
         </div>
-        <div class="redes_sociales col">
+        <div class="redes_sociales col-xs-12 col-md-6 col-lg-3    ">
           <img id="facebook" alt="Facebook"
                 src="https://lh3.googleusercontent.com/-NSLbC_ztNls/T6VX0g6z8AI/AAAAAAAAA0A/_vyIBrmZbuY/s48/facebook48.png"
                 width=48 height=48 /></a>
@@ -104,7 +106,7 @@
             <img id="twitter" alt="Twitter"
                 src="https://lh4.googleusercontent.com/-H9KleSQeKcw/T7YDzaGg2jI/AAAAAAAAA4M/KxLt5fPSHi4/s48/tumblr48.png"
                 width=48 height=48 /></a>
-            <img id="youtube" alt="" YouTube"
+            <img id="youtube" alt=" YouTube"
                 src="https://lh6.googleusercontent.com/-Atgpy-x_OwI/T6mYkA18hYI/AAAAAAAAA1U/qksUJ5uBq3c/s48/youtube48.png"
                 width=48 height=48 /></a>
         </div>
@@ -115,7 +117,7 @@
           <h6>Política de privacidad</h6>
           <h8 >Copyright RodrigoMontoya©-2022.Todos los derechos reservados</h8>
         </article>
-      <article id="foto_medios_pago" class="col-xs-12 col-md-6 col-lg-3 ">
+      <article id="foto_medios_pago" class="col-xs-12 col-md-6 col-lg-3  d-flex justify-content-center">
           <img src="https://secure.mlstatic.com/developers/site/cloud/banners/co/120x240_Todos-los-medios-de-pago.jpg"
                 title="Mercado Pago - Medios de pago" alt="Mercado Pago - Medios de pago" width="120" height="240"/>
       </article>
